[add] Channels list and create

--- a/st-dotnet/st-dotnet.csproj
+++ b/st-dotnet/st-dotnet.csproj
@@ -18,6 +18,9 @@
     <None Remove="Microsoft.EntityFrameworkCore.Design" />
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
     <None Remove="Data\" />
+    <None Remove="Views\Channel\" />
+    <None Remove="AWSSDK.S3" />
+    <None Remove="AWSSDK.Extensions.NETCore.Setup" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
@@ -26,6 +29,7 @@
     <Folder Include="Api\" />
     <Folder Include="Api\Controllers\" />
     <Folder Include="Data\" />
+    <Folder Include="Views\Channel\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
@@ -34,5 +38,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.9.63" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.2" />
   </ItemGroup>
 </Project>
