[add] Category and channel images upload with S3 butcket

--- a/st-dotnet/appsettings.json
+++ b/st-dotnet/appsettings.json
@@ -1,13 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "GalleryDb": ""
+    },
+    "S3_Config": {
+        "AccessKeyId": "",
+        "SecretKey": ""
     }
 }
-
