[add] Login and authenticated routes for dashboard

--- a/st-dotnet/appsettings.json
+++ b/st-dotnet/appsettings.json
@@ -1,16 +1,17 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "GalleryDb": ""
-    },
-    "S3_Config": {
-        "AccessKeyId": "",
-        "SecretKey": ""
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GalleryDb": "",
+    "IdentityDataContextConnection": "Server=(localdb)\\mssqllocaldb;Database=st-dotnet;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "S3_Config": {
+    "AccessKeyId": "",
+    "SecretKey": ""
+  }
 }
