[add] Channel types pages

--- a/st-dotnet/st-dotnet.csproj
+++ b/st-dotnet/st-dotnet.csproj
@@ -25,6 +25,7 @@
     <None Remove="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
     <None Remove="Microsoft.AspNetCore.Identity.UI" />
     <None Remove="Microsoft.VisualStudio.Web.CodeGeneration.Design" />
+    <None Remove="Views\ChannelType\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
@@ -35,6 +36,7 @@
     <Folder Include="Data\" />
     <Folder Include="Views\Channel\" />
     <Folder Include="Views\Comment\" />
+    <Folder Include="Views\ChannelType\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
