--- a/st-dotnet/st-dotnet.csproj
+++ b/st-dotnet/st-dotnet.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>st_dotnet</RootNamespace>
     <UserSecretsId>0d418eb8-a3d5-43be-895d-261eca375ef1</UserSecretsId>
+    <DockerComposeProjectPath>../docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,6 +27,7 @@
     <None Remove="Microsoft.AspNetCore.Identity.UI" />
     <None Remove="Microsoft.VisualStudio.Web.CodeGeneration.Design" />
     <None Remove="Views\ChannelType\" />
+    <None Remove="SqlEdge\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
@@ -37,6 +39,7 @@
     <Folder Include="Views\Channel\" />
     <Folder Include="Views\Comment\" />
     <Folder Include="Views\ChannelType\" />
+    <Folder Include="SqlEdge\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
