[fix] Migrate to mysql

--- a/st-dotnet/st-dotnet.csproj
+++ b/st-dotnet/st-dotnet.csproj
@@ -27,7 +27,7 @@
     <None Remove="Microsoft.AspNetCore.Identity.UI" />
     <None Remove="Microsoft.VisualStudio.Web.CodeGeneration.Design" />
     <None Remove="Views\ChannelType\" />
-    <None Remove="SqlEdge\" />
+    <None Remove="Pomelo.EntityFrameworkCore.MySql" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
@@ -39,7 +39,6 @@
     <Folder Include="Views\Channel\" />
     <Folder Include="Views\Comment\" />
     <Folder Include="Views\ChannelType\" />
-    <Folder Include="SqlEdge\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
@@ -53,5 +52,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
   </ItemGroup>
 </Project>
